# TradingWorkspace

./: .env.example  .gitignore  README.md  main.py  mosek.lic  pyproject.toml  trading_engine_snapshot.docx  utils.py
.github/workflows/: ci.yml  deploy.yml  manual-rollback.yml  production-paper-bp.yml  production-paper-deploy.yml  production-paper.yml  pytest.yml  release-controller.yml  simulations-paper-bp.yml  simulations-paper-deploy.yml
artifacts/baskets/: orders_only.csv  orders_only.parquet
config/: app.yaml  broker.yaml  db.yaml  execution.yaml  paper.yaml  risk_limits.yaml
config/universes/: futures.yaml
data-engineering/: .gitignore  README.md  pyproject.toml  test.py
data-engineering/.ai/skills/data-api-cli/: SKILL.md
data-engineering/.ai/skills/data-api-python/: SKILL.md
data-engineering/.github/: CODEOWNERS  CONTRIBUTING.md  POETRY.md
data-engineering/.github/workflows/: ci.yml
data-engineering/config/: pipelines.yaml
data-engineering/config/gcp/: development.yaml  production.yaml
data-engineering/config/tables/: fields.json
data-engineering/src/api/: README.md  __init__.py  data_api.py  enums.py
data-engineering/src/api/backfill_job/: Dockerfile  README.md  __init__.py  deploy.sh  run.py
data-engineering/src/api/examples/: add_and_backfill_new_equity.md
data-engineering/src/pipeline/: base_macro_source.py  base_source.py  pipeline.py
data-engineering/src/pipeline/common/: bigquery_client.py  constants.py  enums.py  gData.py  models.py  otel.py  setup_logger.py  utils.py
data-engineering/src/pipeline/sources/: eia_petroleum.py  factset_equities_bofa_bond_indicies.py  factset_equities_ohlcv.py  factset_equities_ohlcv_snapshot.py  factset_global_indices.py
data-engineering/src/scheduler/: README.md
data-engineering/src/scheduler/eia_petroleum/: Dockerfile  eia_petroleum.py  requirements.txt
data-engineering/src/scheduler/factset_bofa_bond_indices/: Dockerfile  factset_bofa_bond_indices.py
data-engineering/src/scheduler/factset_eod/: Dockerfile  factset_eod.py
data-engineering/src/scheduler/factset_global_indices/: Dockerfile  factset_global_indices.py  requirements.txt
data-engineering/src/scheduler/factset_raw_data_update/: Dockerfile  factset_raw_data_update.py
data-engineering/src/scheduler/factset_snapshot/: Dockerfile  factset_snapshot.py  requirements.txt
data-engineering/src/scheduler/raw_supplemental_data_update/: Dockerfile  raw_supplemental_data_update.py  requirements.txt
data-engineering/src/scripts/: README.md
data-engineering/src/scripts/create_tables/: setup_all_tables.py  setup_fields_table.py  setup_hawk_identifiers_table.py  setup_records_table.py  setup_supplemental_records_table.py  setup_supplemental_series_table.py  table_utils.py
data-engineering/tests/: conftest.py  test_base_source.py  test_bigquery_client.py  test_eia_petroleum.py  test_factset_equities_bofa_bond_indicies.py  test_factset_equities_ohlcv.py  test_factset_equities_ohlcv_snapshot.py  test_factset_global_indices.py  test_gData.py  test_pipeline.py  test_pipeline_utils.py
docs/: aggregator-optimizer-refactor-plan.md
hawk-backtester/: .gitignore  CONTRIBUTING.md  LICENSE  PACKAGING_NOTES.md  flake.nix
hawk-backtester/.github/: CODEOWNERS
hawk-backtester/data/: Updated_Backtester_Input.csv
hawk-backtester/python/: example.py
hawk-backtester/src/: README.md  lib.rs  metrics.rs
hawk-sdk/: README.md  mkdocs.yml  setup.py
hawk-sdk/.github/: CONTRIBUTING.md
hawk-sdk/docs/: index.md  system_usage.md  universal_supplemental_usage.md  universal_usage.md
ibgw/: README.md  docker-compose.yml
libs/hawk-backtester/: Cargo.toml  README.md  pyproject.toml
libs/hawk-backtester/python/hawk_backtester/: __init__.py
libs/hawk-backtester/src/: backtester.rs  input_handler.rs  main.rs
libs/hawk-backtester/src/tests/: backtester_test.rs  commission_test.rs  input_handler_test.rs  mod.rs
model_state/: features.py  registry.py
models/: registry.py
models/catalogue/: momentum.py
notebooks/: 02_signals_and_targets.ipynb  07_submit_paper_orders.ipynb
optimizers/: registry.py
quant-platform/: .gitignore  README.md  requirements.txt
quant-platform/config/: config.yaml  secrets.example.yaml
src/common/: constants.py  (+7 more)
test-repo/: .gitignore  README.md  hello_aditya_parekh.py  hello_brett_saulnier.py  hello_dev_menon.py  hello_erica_henderson.py  hello_francis_kuefler.py  hello_nick_gilles.py  hello_raghav_agrawal.py  hello_rithwik_babu.py  hello_roshni_guha.py  hello_sam_geng.py  hello_taiya_shiva.py  hello_vamshi_pagidi.py  hello_zack_spector.py  hello_zack_wagner.py
tests/: conftest.py
trading-engine/: .gitignore  AUTOTRADING_SETUP.md  README.md  SETUP_GUIDE_ZH.md  pyproject.toml
(+394 files in other folders)
