[tool.poetry]
name = "trading-engine"
version = "0.1.0"
description = ""
authors = ["Rithwik Babu <rithwikbabu2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
hawk-backtester = "^0.5.4"
polars = "1.32.0"
pyyaml = "^6.0.2"
pyarrow = "^21.0.0"
gcsfs = "^2025.7.0"
opentelemetry-api = "^1.36.0"
opentelemetry-sdk = "^1.36.0"
opentelemetry-exporter-otlp = "^1.36.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pymsteams = "^0.2.5"
ib-async = "^2.0.1"
scipy = "^1.11.0"
jupyterlab = { version = ">=4", optional = true }
ipywidgets = { version = ">=8", optional = true }
matplotlib = { version = ">=3.8", optional = true }
cvxpy = "^1.7.2"
scikit-learn = "^1.3.0"
ecos = "^2.0.14"
mosek = "^11.0.28"

[tool.poetry.extras]
research = ["jupyterlab", "ipywidgets", "matplotlib"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"