[tool.poetry]
name = "hawk-backtester"
version = "0.5.4"
description = "High-performance portfolio backtester written in Rust"
authors = ["Charles Maloney <charles.c.maloney@gmail.com>"]
readme = "README.md"
packages = [{ include = "hawk_backtester", from = "python" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
maturin = "^1.4.0"
polars = "==1.32.0"
pytest = "^8.3.3"
numpy = ">=1.26.0"
pyarrow = ">18.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hawk-backtester"
version = "0.5.4"
requires-python = ">=3.9,<3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "hawk_backtester.hawk_backtester"
